# langchain-tutorial

./: .gitignore  README.md  pyproject.toml
src/lang_chain_tutorial/: 01-basic-openai-llm.py
src/langchain_tutorial/: 01_basic_openai_llm.py
